src/snapshots/pdm__tests__home_screen.snap
---
source: src/main.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 25 },
        content: [
            "┌ PDM ──────────────────┐┌ Home ───────────────────────────────────────────────┐",
            "│Home                   ││Welcome to PDM.                                      │",
            "│Bitcoin Config         ││                                                     │",
            "│Bitcoin Status         ││Select a config from the sidebar to edit.            │",
            "│P2Pool Config          ││                                                     │",
            "│P2Pool Status          ││                                                     │",
            "│LN Config              ││                                                     │",
            "│LN Status              ││                                                     │",
            "│Shares Market          ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "└───────────────────────┘└─────────────────────────────────────────────────────┘",
            " ↑↓  Navigate sidebar   Enter  Select   q  Quit                                 ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 24, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 4, y: 24, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 23, y: 24, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 30, y: 24, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 39, y: 24, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 42, y: 24, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 49, y: 24, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
